Changed test of initialization flag to compare list size to 0 rather than call isEmpty, in order to not depend implicitly on the Alf model library.